classDiagram
    class User {
      +id: i64
      +name: String
      +email: String
      +phone: String
      +role: String
      +password: String
    }

    class Session {
      +id: i64
      +userId: i64
      +token: String
      +createdAt: String
      +expiresAt: String
    }

    class Member {
      +id: i64
      +name: String
      +email: String
      +phone: String
      +membership: String
      +status: String
    }

    class Trainer {
      +id: i64
      +name: String
      +specialty: String
      +experience: String
      +rating: f64
    }

    class FitnessClass {
      +id: i64
      +name: String
      +trainerId: i64?
      +schedule: String
      +capacity: i64
      +enrolled: i64
      +level: String
    }

    class Booking {
      +id: i64
      +member: String
      +classId: i64?
      +date: String
      +time: String
      +status: String
    }

    class Payment {
      +id: i64
      +member: String
      +amount: i64
      +method: String
      +status: String
      +receiptId: i64?
    }

    class Receipt {
      +id: i64
      +memberId: i64
      +total: i64
      +createdAt: String
      +note: String
    }

    User "1" --> "0..*" Session
    Trainer "1" --> "0..*" FitnessClass
    FitnessClass "1" --> "0..*" Booking
    Member "1" --> "0..*" Receipt
    Receipt "1" --> "0..*" Payment
